--- a/AddSsoDotnet3/.fx/configs/projectSettings.json
+++ b/AddSsoDotnet3/.fx/configs/projectSettings.json
@@ -9,7 +9,8 @@
     "hostType": "Azure",
     "azureResources": [],
     "capabilities": [
-      "Tab"
+      "Tab",
+      "TabSSO"
     ],
     "activeResourcePlugins": [
       "fx-resource-frontend-hosting",
@@ -17,7 +18,8 @@
       "fx-resource-local-debug",
       "fx-resource-appstudio",
       "fx-resource-cicd",
-      "fx-resource-api-connector"
+      "fx-resource-api-connector",
+      "fx-resource-aad-app-for-teams"
     ]
   },
   "programmingLanguage": "csharp",
